--- a/config.json
+++ b/config.json
@@ -16,10 +16,10 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Your-Father",
+    "BOTNAME": "Bot",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100037743553265"
+        "61556349668504"
     ],
     "NDH": [
         "100037743553265"
