--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,92 @@
-
+[
+    {
+        "key": "sb",
+        "value": "ZdWoZy7kCsoJhXUQ4viRiuHW",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-07T09:26:32.205Z",
+        "lastAccessed": "2025-03-07T09:26:32.205Z"
+    },
+    {
+        "key": "datr",
+        "value": "ZdWoZ8ugw3Uy7nJOVzdrkqb0",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-07T09:26:32.205Z",
+        "lastAccessed": "2025-03-07T09:26:32.205Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-07T09:26:32.205Z",
+        "lastAccessed": "2025-03-07T09:26:32.205Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-07T09:26:32.205Z",
+        "lastAccessed": "2025-03-07T09:26:32.205Z"
+    },
+    {
+        "key": "dpr",
+        "value": "1.7526863813400269",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-07T09:26:32.205Z",
+        "lastAccessed": "2025-03-07T09:26:32.205Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61574080942066",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-07T09:26:32.205Z",
+        "lastAccessed": "2025-03-07T09:26:32.205Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-07T09:26:32.205Z",
+        "lastAccessed": "2025-03-07T09:26:32.205Z"
+    },
+    {
+        "key": "xs",
+        "value": "16%3AU3fxv7NZCDsXPA%3A2%3A1741337363%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-07T09:26:32.205Z",
+        "lastAccessed": "2025-03-07T09:26:32.205Z"
+    },
+    {
+        "key": "fr",
+        "value": "1yzS3g9TCqysckDGG.AWXp0DswE2IDXit6-dUYdno9G1F6usMzBLThjQ.BnyrIk..AAA.0.0.BnyrNq.AWWBzOx_iUg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-07T09:26:32.205Z",
+        "lastAccessed": "2025-03-07T09:26:32.205Z"
+    },
+    {
+        "key": "wd",
+        "value": "1048x1986",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-07T09:26:32.205Z",
+        "lastAccessed": "2025-03-07T09:26:32.205Z"
+    }
+      ]
